# Dusty-XOOPIC

./: README
xoopic/include/: CsMCTI.h  LiMCTI.h  complex.h  cursrc.h  cylindri.h  dadixyp.h  dd.h  diagg.h  diagn.h  dielecg.h  domain.h  grid.h  gridprob.h  laserspotdiag.h  loadg.h  loadpwg.h  mapNGDs.h  maxwelln.h  mcc.h  mccg.h  operators.h  parpoi.h  particlevar.h  probergn.h  psdFieldDiag1d.h  psdFieldDiag2d.h  ptclgrp.h  secondary.h  spatialg.h  speciesg.h  wavesplitdiag.h  xgmini.h
xoopic/xgrafix/: ._AUTHORS  ._COPYING  ._ChangeLog  ._INSTALL  ._Makefile  ._Makefile.am  ._Makefile.in  ._NEWS  ._README  ._README-config  ._acconfig.h  ._aclocal.m4  ._autom4te.cache  ._conf-usual  ._config  ._config.h  ._config.h.in  ._config.h.in~  ._config.status  ._configure  ._configure.in  ._ctest  ._doc  ._ftest  ._run_conf.sh  ._src  ._stamp-h.in  ._stamp-h1  ._xgmovie  ._xgrafix-2.41.spec  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README-config  acconfig.h  (+8 more)
xoopic/xgrafix/autom4te.cache/: ._output.0  ._requests  ._traces.0  output.0  traces.0
xoopic/xgrafix/config/: ._COPYING  ._Info.plist.in  ._Makefile  ._Makefile.am  ._Makefile.in  ._README.fortran_m4  ._ant.m4  ._automake.sh  ._aztec.m4  ._babel.m4  ._bindist.am  ._blas.m4  ._boost.m4  ._bundle.am  ._ccafe.m4  ._ccfits.m4  ._cfitsio.m4  ._clean-ac.am  ._clean-cxx.am  ._cleanconf.sh  ._cleanemacs.sh  ._cmee.m4  ._compile  ._config.guess  ._config.sub  ._contrib  ._corba.m4  ._cvs2cl.pl  ._cxx.m4  ._defaultcomps.m4  ._depcomp  ._depend.am  ._doxygen.am  ._f77.m4  ._f77flags.m4  ._f77interop.m4  ._fc.m4  ._fcflags.m4  ._fcinterop.m4  ._fdepend.pl  (+92 more)
xoopic/xgrafix/config/contrib/: ._acx_blas.m4  ._acx_f77_cmain_fflags.m4  ._acx_lapack.m4  ._ax_f90_module_extension.m4  ._ax_f90_module_flag.m4
xoopic/xgrafix/ctest/: ._Makefile  ._Makefile.am  ._Makefile.in  ._test.c  ._test.inp  Makefile  Makefile.am  Makefile.in  test.c  test.inp  xtest
xoopic/xgrafix/doc/: ._Makefile  ._xgrafix.aux  ._xgrafix.dvi  ._xgrafix.ps  ._xgrafix.tex  Makefile  xgrafix.dvi  xgrafix.ps  xgrafix.tex
xoopic/xgrafix/ftest/: ._Makefile  ._Makefile.Fortran  ._Makefile.am  ._Makefile.in  ._README  ._extra.c  ._test.f  ._test.f.in  Makefile  Makefile.Fortran  Makefile.am  Makefile.in  README  extra.c  test.f  test.f.in
xoopic/xgrafix/src/: ._.depend  ._Imakefile  ._Imakefile.Fortran  ._Makefile  ._Makefile.am  ._Makefile.f  ._Makefile.in  ._Makefile.xgrafix  ._README  ._ps6to1.c  ._xgcommands.c  ._xgcrosshair.c  ._xgdatamacros.h  ._xgdialogs.tcl  ._xgdialogs250.tcl  ._xgfinterface.f  ._xgfinterface.f.in  ._xginit.tcl  ._xginit250.tcl  ._xginitc.c  ._xginitf.c  ._xginitvar.c  ._xgio.h  ._xgmini.h  ._xgminint.h  ._xgmovie.c  ._xgnox.c  ._xgpaint2d.c  ._xgpaint3d.c  ._xgpaintvec.c  ._xgpixmap.c  ._xgprint.c  ._xgprintgif.c  ._xgprintgif.h  ._xgrafix.h  ._xgrafixint.h  ._xgreadrit.c  ._xgrescale.c  ._xgscalar.h  ._xgscalar.h.in  (+44 more)
xoopic/xgrafix/xgmovie/: ._Makefile  ._Makefile.am  ._Makefile.in  ._list.h  ._sample  ._save_format_notes  ._xgmovie.cpp  ._xgmovie.doc  ._xgmovie.h  ._xgmreduce.cpp  ._xgmreduce_notes  Makefile  Makefile.am  Makefile.in  list.h  save_format_notes  xgmovie  xgmovie.cpp  xgmovie.doc  xgmovie.h  xgmreduce  xgmreduce.cpp  xgmreduce_notes
xoopic/xgrafix/xgmovie/sample/: ._sample.bxg  ._sample.inp  ._sample.num  ._sample.str  sample.bxg  sample.inp  sample.str
xoopic/xoopic/: Doxyfile  Makefile  Makefile.in  README.INSTALL  acconfig.h  config.h  config.h.in  config.status  configure  configure.in  run_conf.sh  xgrafix.m4
xoopic/xoopic/Attic/qtg/: main.cpp  xgmain.cpp
xoopic/xoopic/CopiedMakefiles/advisor/: Makefile  Makefile.simple
xoopic/xoopic/advisor/: #part1g.h#  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile.in~  Makefile.mak  Makefile.msvc  Makefile~  advisman.cpp  advisman.h  boundg.cpp  boundg.h  diagg.cpp  dielecg.cpp  gridg.cpp  loadg.cpp  loadpwg.cpp  mccg.cpp  spatialg.cpp  spatialg.h  spboundg.h  speciesg.cpp  speciesvarg.cpp  speciesvarg.h  varloadg.cpp  varloadg.h
xoopic/xoopic/autom4te.cache/: output.0  traces.0
xoopic/xoopic/config/: Makefile  Makefile.in  cxx.m4
xoopic/xoopic/doc/: diagnostic.txt  diagnostics_how_to.ps  diagnostics_how_to.tex
xoopic/xoopic/input/: ambipolar.dmp  b3.inp  b3.inp~  dcdis.eps  dcdis.inp  dcdis.inp~  dcdis.txt  dcdisd.inp  dcdisd.inp~  dring.eps  dring.txt  paper1.inp  paper1.inp~  paper2.inp~  xybeam.inp
xoopic/xoopic/otools/: Makefile  Makefile.am  Makefile.in  Makefile.simple  diagn.cpp  dump.cpp  dumpHDF5.cpp  evaluator.tab.c  evaluator.tab.h  gridprob.cpp  history.h  initwin.cpp  laserspotdiag.cpp  newdiag.cpp  newdiag.h  ostring.h  probergn.cpp  psdFieldDiag1d.cpp  psdFieldDiag2d.cpp  wavesplitdiag.cpp  wrapFFTW.cpp  wrapFFTW.h
xoopic/xoopic/physics/: #mcc.cpp#  .fields.cpp.swp  CsMCTI.cpp  HeMCTI.cpp  HeMCTI.h  LiMCTI.cpp  Makefile  Makefile.in  Makefile.in~  Makefile~  boltzman.cpp  boundary.cpp  boundary.h  cursrc.cpp  cylindri.cpp  dadixyp.cpp  debug.cpp  debug.h  domain.cpp  electrostatic_operator.cpp  emitter.cpp  fieldemi.cpp  fieldemi.h  fields.cpp  fields.h  grid.cpp  iregion.cpp  iregion.h  load.cpp  load.h  loadpw.cpp  loadpw.h  mapNGDs.cpp  maxwelln.cpp  mcc.cpp  mcc.h  misc.h  ngd.cpp  ngd.h  parpoi.cpp  (+22 more)
xoopic/xoopic/xg/: Makefile  Makefile.am  Makefile.in  main.cpp  xgmain.cpp
